--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "api-podcast-node",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "directories": {
     "doc": "docs"
